--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -14,4 +14,5 @@
       </div>
     </div>
     <button type="submit" [disabled]="loginForm.invalid">Submit</button>
+    <button type="button" (click)="goToSignUp()">Sign up</button>
   </form>
