--- a/src/app/view-employee/view-employee.component.html
+++ b/src/app/view-employee/view-employee.component.html
@@ -5,9 +5,9 @@
         
         <div class="card-body">
           <h5 class="card-title">First Name</h5>
-          <p class="card-text">{{employee.first_name}}</p>
+          <p class="card-text">{{employee.firstName}}</p>
           <h5 class="card-title">Last Name</h5>
-          <p class="card-text">{{employee.last_name}}</p>
+          <p class="card-text">{{employee.lastName}}</p>
           <h5 class="card-title">Email</h5>
           <p class="card-text">{{employee.email}}</p>
           <h5 class="card-title">Salary</h5>
