--- a/src/app/employee-delete/employee-delete.component.html
+++ b/src/app/employee-delete/employee-delete.component.html
@@ -4,8 +4,8 @@
   <div class="card-body">
     <h5 class="card-title">Are you sure you want to delete this employee?</h5>
     <p class="card-text">
-      <strong>First Name:</strong> {{ employee.first_name }}<br>
-      <strong>Last Name:</strong> {{ employee.last_name }}<br>
+      <strong>First Name:</strong> {{ employee.firstName }}<br>
+      <strong>Last Name:</strong> {{ employee.lastName }}<br>
       <strong>Email:</strong> {{ employee.email }}<br>
       <strong>Gender:</strong> {{ employee.gender }}<br>
       <strong>Salary:</strong> {{ employee.salary }}
