--- a/src/app/employee-update/employee-update.component.html
+++ b/src/app/employee-update/employee-update.component.html
@@ -1,16 +1,16 @@
 <div *ngIf="employee"></div>
 <form [formGroup]="employeeForm" (ngSubmit)="updateEmployee()">
     <div>
-      <label for="first_name">First Name:</label>
-      <input type="text" formControlName="first_name" [(ngModel)]="employee.first_name" />
-      <div *ngIf="employeeForm.get('first_name')?.invalid && employeeForm.get('first_name')?.touched">
+      <label for="firstName">First Name:</label>
+      <input type="text" formControlName="firstName" [(ngModel)]="employee.firstName" />
+      <div *ngIf="employeeForm.get('firstName')?.invalid && employeeForm.get('firstName')?.touched">
         First name is required.
       </div>
     </div>
     <div>
-      <label for="last_name">Last Name:</label>
-      <input type="text" formControlName="last_name" [(ngModel)]="employee.last_name" />
-      <div *ngIf="employeeForm.get('last_name')?.invalid && employeeForm.get('last_name')?.touched">
+      <label for="lastName">Last Name:</label>
+      <input type="text" formControlName="lastName" [(ngModel)]="employee.lastName" />
+      <div *ngIf="employeeForm.get('lastName')?.invalid && employeeForm.get('lastName')?.touched">
         Last name is required.
       </div>
     </div>
